<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_vertical_margin"
                tools:context="com.qulix.panteleevrv.trainingtask.client.ui.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            style="@style/VerticalLinear">

        <Button
                android:id="@+id/projectsPage"
                android:text="@string/projects_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <Button
                android:id="@+id/tasksPage"
                android:text="@string/tasks_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <Button
                android:id="@+id/employeesPage"
                android:text="@string/employees_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
