<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_edit_employee"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.qulix.panteleevrv.trainingtask.client.ui.employee.DetailEmployeeActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/linear_detail_margin"
                android:layout_marginRight="@dimen/linear_detail_margin"
                style="@style/VerticalLinear">

            <TextView
                    android:text="@string/employee_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_header_margin_top"
                    style="@style/HeaderFieldTextView" />

            <EditText
                    android:id="@+id/employeeId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    style="@style/DefaultEditText" />

            <TextView
                    android:text="@string/employee_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_header_margin_top"
                    style="@style/HeaderFieldTextView" />

            <EditText
                    android:id="@+id/employeeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/DefaultEditText" />

            <TextView
                    android:text="@string/employee_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_header_margin_top"
                    style="@style/HeaderFieldTextView" />

            <EditText
                    android:id="@+id/employeeSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/DefaultEditText" />

            <TextView
                    android:text="@string/employee_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_header_margin_top"
                    style="@style/HeaderFieldTextView"/>

            <EditText
                    android:id="@+id/employeePosition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/DefaultEditText" />

            <Button
                    android:id="@+id/saveEmployee"
                    android:text="@string/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/button_margin_top" />

            <Button
                    android:id="@+id/backEmployeeList"
                    android:text="@string/cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_margin_bottom" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
