<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_project_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.qulix.panteleevrv.trainingtask.client.ui.project.ProjectListActivity">

    <TextView
            android:id="@+id/emptyProjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            style="@style/EmptyText" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/VerticalLinear">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_header_height"
                style="@style/LinearHeader">

            <TextView
                    android:text="@string/id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/project_id_weight"
                    style="@style/ListHeaderText" />

            <TextView
                    android:text="@string/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/project_title_weight"
                    style="@style/ListHeaderText" />

            <TextView
                    android:text="@string/short_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/project_short_title_weight"
                    style="@style/ListHeaderText" />

        </LinearLayout>

        <ListView
                android:id="@+id/projects"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>
